# url_shortener

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  default.nix  docker-compose.yml  register.sh
migrations/2022-10-15-205430_db_setup/: up.sql
src/: database.rs  main.rs
src/database/: errors.rs  mod.rs  models.rs  schema.rs  setup.rs
tests/: integration_tests.rs
