[package]
name = "url_shortener_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.118", features = ["derive"] }
regex = "1.6"
env_logger = "*"
log = "*"
derive_more = "*"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }